# Call_me_maybe

./: Makefile  call_me_maybe.py  diary.md  pyproject.toml  rules.md
data/input/: function_calling_tests.json
data/output/: function_calling_results.json
src/: __main__.py  cli.py  decoder.py  errors.py  json_loader.py  llm_adapter.py  models.py  orchestrator.py  prompt_builder.py  writer.py
